# BallStarTree

./: CMakeLists.txt
source/: ballstar.cpp  ballstar.h  main.cpp  nodeballstar.h  para compilar.txt  pca.h  songs_final.csv  songs_final100.csv  songs_final500.csv
